recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: reassignment to val
    count=count + 1;
         ^Nth:5: error: not found: value c
    if (tl == Nil) return c;
                          ^Nth:6: error: not found: value c
    if(c == tn){
       ^Nth:10: error: not found: value c
      return lambda(tl.tail, n, c);
                                ^